adding some file and code

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Sign Up</h1>
+    <div>
+        <div><p>This is not a real online service</p></div>
+        <div>form</div>
+        <div>button</div>
+        <div><img src="assets/halie-west-25xggax4bSA-unsplash.jpg" alt=""></div>
+    </div>
 </body>
 </html>
