--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
     <div>
         <div><p>This is not a real online service</p></div>
-        <div>form</div>
+        <form action="" method="post">
+            <div>
+                <label for="first_name">First Name</label>
+                <input type="text" name="first_name" id="first_name">
+            </div>
+        </form>
         <div>button</div>
         <div><img src="assets/halie-west-25xggax4bSA-unsplash.jpg" alt=""></div>
     </div>
