modifying some codes

--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@
 </head>
 <body>
     <div>
-        <div><p>This is not a real online service</p></div>
-        <form action="" method="post">
-            <div>
-                <label for="first_name">First Name</label>
-                <input type="text" name="first_name" id="first_name">
-            </div>
+        <form action="/action_page.php" class="container">
+            
         </form>
-        <div>button</div>
-        <div><img src="assets/halie-west-25xggax4bSA-unsplash.jpg" alt=""></div>
     </div>
+        <div><img src="assets/halie-west-25xggax4bSA-unsplash.jpg" alt=""></div>
 </body>
 </html>
