adding some code

--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 <body>
     <div>
         <div><img src="assets/halie-west-25xggax4bSA-unsplash.jpg" alt=""></div>
-        <form action="/action_page.php" class="container">
-            
-        </form>
+        <div id="left-section">
+            <p>This is not a real online service! You know you need something like This
+                in your life to help you realize your deepest drems.
+                You know you want to.
+            </p>
+            <form action="/action_page.php" class="container">
+                
+            </form>
+            <button type="submit">Create Account</button>
+        </div>
+
     </div>
 </body>
 </html>
