adding some code

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div>
-        <div><img src="assets/halie-west-25xggax4bSA-unsplash.jpg" alt=""></div>
-        <div id="left-section">
+        <div class="right-section"><img src="assets/halie-west-25xggax4bSA-unsplash.jpg" alt=""></div>
+        <div class="left-section">
             <p>This is not a real online service! You know you need something like This
                 in your life to help you realize your deepest drems.
                 You know you want to.
