--- a/index.html
+++ b/index.html
@@ -10,14 +10,35 @@
     <div>
         <div class="right-section"><img src="assets/halie-west-25xggax4bSA-unsplash.jpg" alt=""></div>
         <div class="left-section">
-            <p>This is not a real online service! You know you need something like This
-                in your life to help you realize your deepest drems.
-                You know you want to.
-            </p>
-            <div class="form">            
+            <div class="paragraph">
+                <p>This is not a real online service! You know you need something like This
+                    in your life to help you realize your deepest drems.
+                    You know you want to.
+                </p>
+            </div>
+            <div class="form1">            
             <form action="/action_page.php" class="container">
-                <label for="first_name">First Name:</label>
+                <div>
+                    <label for="first_name">First Name</label>
+                    <input type="text" name="first_name" id="first_name">
+                </div>
+                
+                <div>
+                    <label for="last_name">Last Name</label>
+                    <input type="text" name="last_name" id="last_name">
+                </div>
+                
+                <div>
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email">
+                </div>
+
+                <div>
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" name="phone" id="phone">
+                </div>
             </form>
+
         </div>
             <button type="submit">Create Account</button>
         </div>
