--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <label for="last_name">Last Name</label>
                     <input type="text" name="last_name" id="last_name">
                 </div>
-                
+
                 <div>
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email">
@@ -36,6 +36,11 @@
                 <div>
                     <label for="phone">Phone Number</label>
                     <input type="tel" name="phone" id="phone">
+                </div>
+
+                <div>
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password">
                 </div>
             </form>
 
