--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
             </form>
 
-        </div>
+        </div class="submit">
             <button type="submit">Create Account</button>
         </div>
 
