changing some codes

--- a/index.html
+++ b/index.html
@@ -12,42 +12,47 @@
         <div class="left-section">
             <div class="paragraph">
                 <p>This is not a real online service! You know you need something like This
-                    in your life to help you realize your deepest drems.
+                    in your life to help you realize your deepest dreams.
                     You know you want to.
                 </p>
             </div>
             <div class="form1">            
             <form action="/action_page.php" class="container">
-                <div>
+                <div class="first_name">
                     <label for="first_name">First Name</label>
                     <input type="text" name="first_name" id="first_name">
                 </div>
                 
-                <div>
+                <div class="last_name">
                     <label for="last_name">Last Name</label>
                     <input type="text" name="last_name" id="last_name">
                 </div>
 
-                <div>
+                <div class="email">
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email">
                 </div>
 
-                <div>
+                <div class="phone">
                     <label for="phone">Phone Number</label>
                     <input type="tel" name="phone" id="phone">
                 </div>
 
-                <div>
+                <div class="password">
                     <label for="password">Password</label>
                     <input type="password" name="password" id="password">
                 </div>
             </form>
 
-        </div class="submit">
+    </div class="submit">
+        <div>
             <button type="submit">Create Account</button>
         </div>
-
+        <div>
+            Already have 
+        </div>
     </div>
+
+
 </body>
 </html>
