--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <div>
         <div class="right-section"><img src="assets/halie-west-25xggax4bSA-unsplash.jpg" alt=""></div>
+
+
         <div class="left-section">
-            <div class="paragraph">
+            <div class="header">
                 <p>This is not a real online service! You know you need something like This
                     in your life to help you realize your deepest dreams.
                     You know you want to.
@@ -44,15 +46,15 @@
                 </div>
             </form>
 
-    </div class="submit">
-        <div>
+    </div class="footer">
+        <div class="submitBtn">
             <button type="submit">Create Account</button>
         </div>
-        <div>
+        <div class="paragraph">
             Already have 
         </div>
+
+
     </div>
-
-
 </body>
 </html>
