adding some codes

--- a/index.html
+++ b/index.html
@@ -45,14 +45,16 @@
                     <input type="password" name="password" id="password">
                 </div>
             </form>
+            </div>
 
-    </div class="footer">
-        <div class="submitBtn">
+
+        <div class="footer">
             <button type="submit">Create Account</button>
+            <p>Already have an account</p>
         </div>
-        <div class="paragraph">
-            Already have 
-        </div>
+
+
+
 
 
     </div>
