coding submit button

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
         <div class="footer">
-            <button type="submit">Create Account</button>
+            <button class="submitBtn" type="submit">Create Account</button>
             <p>Already have an account</p>
         </div>
 
